# devkit_FOFANA_AZIZ

./: .gitignore  NOTES.md  README.md  discovery.md  pyproject.toml  testCommitAi.txt
src/devkit/: config.py  main.py
src/devkit/commands/: ai.py  github.py  workflow.py
src/devkit/utils/: check.py  display.py  gh.py  shell.py
tests/: test_devkit.py
